# open_mine_pilot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.py
bot/: __init__.py  base.py  bot.py  mineflayer_bot.py
open_mine_pilot/: __init__.py  agent_graph.py  agent_state.py  core.py  core_agent.py  mineflayer_pilot.py  mineflayer_transport.py  pilot.py  transport.py  transport_base.py
server/: docker-compose.yml
src/open_mine_pilot/: __init__.py  mineflayer_pilot.py
tests/: conftest.py  mock_transport.py  test_core_agent.py
